# elibri-backend

./: .env.example  .gitignore  Makefile  go.mod  go.sum
.github/workflows/: ci.yml
cmd/server/: main.go
contracts/: scenarios.snapshot.json
deployments/: Dockerfile  docker-compose.yml
internal/api/: admin_handlers.go  auth_handlers.go  contracts_test.go  handlers_crypto.go  handlers_market.go  handlers_ml.go  handlers_ml_v2.go  macrocal_handlers.go  news_handlers.go  router.go  (+3 more)
ml-training/: B3_MTF_FILTER_DESIGN.md  ML_REPORT.md  PATCH_2H_EXTENDED_PLAYBOOK.md  analyze_thresholds.py  b1_1d_breakdown.py  b1_1d_deepdive.py  b2_4h_breakdown.py  b2_4h_fold_stability.py  b2_4h_threshold_override.json  b2_d3b_regime_backtest.py  b2_d5_tune_4h.py  b3_1h_deepdive.py  b3_d4_direction_balance.py  b3_d5_regime.py  b4_15m_deepdive.py  b4_d2_direction.py  b4_d5_regime.py  backtest.py  backtest_mtf.py  backtest_v2.py  data_fetcher.py  feature_engine.py  fetch_macro_features.py  gpu_probe.py  iter1_exp_b_sample_weights.py  iter1_fill_morning_status.py  iter1_summary.py  iter1_wfcv.py  iter1_wfcv_dump.py  iter1b_backtest_mtf.py  iter_analyze.py  iter_backtest_3class.py  make_parity_fixture.py  paper_trade.py  pattern_matcher.py  requirements.txt  risk_tiers_config.py  run_after_training.sh  run_intraday_training.sh  run_phase1.sh  (+3 more)
telegram-bot/: .env.example  README.md  pyproject.toml
telegram-bot/src/: analyzers.py  config.py  db.py  handlers.py  main.py  market_data.py  publisher.py  redis_consumer.py  render.py
telegram-bot/src/formatters/: __init__.py  default.py
(+63 files in other folders)
